--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -1,6 +1,7 @@
 [
 	{
 		"title": "Lorem ipsum dolor sit.",
+		"Year" : "2024",
 		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
 		"description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
 	},
